--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,9 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.NetBeansProjects-cadastrocliente_desktop_bd_dao_3c}:\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,6 +62,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -68,6 +71,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=cadastrocliente_desktop_bd_dao_3c
 main.class=Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -89,3 +94,4 @@ run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
+test.test.dir=test
