--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,8 @@
     <groupId>com</groupId>
     <artifactId>cadastrocliente_desktop_bd_dao_3c</artifactId>
     <version>1.0-SNAPSHOT</version>
+    
+    <!-- propriedades do projeto --> 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -29,24 +31,37 @@
             <scope>test</scope>
         </dependency>        
     </dependencies>
-    
-    
+        
     <build>
         <!-- Plugins do Maven -->
-        <plugins>
-            <!-- Configura o programa principal do projeto -->
+        <plugins>      
+            <!-- Plugin de geração do jar com as dependências --> 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.4.2</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>Principal</mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>           
-        </plugins>        
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Configura o arquivo de manifesto com a classe principal do projeto -->
+                            <archive>
+                                <manifest>
+                                    <mainClass>
+                                        Principal
+                                    </mainClass>
+                                </manifest>
+                            </archive>
+                            <!-- Gera um novo jar com as dependências -->
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
     </build>
 </project>
